# thinkbox-frost

./: CMakeLists.txt  CONTRIBUTING.md  NOTICE.txt  README.md  build.py  conanfile.py  stdafx.cpp  stdafx.h
UnitTests/: CMakeLists.txt  geometry_meshing_parameters.hpp  stdafx.cpp  stdafx.h  test_frost.cpp  test_geometry_meshing.cpp
frost/: channel_names.hpp  create_id_channel_from_index_particle_istream.hpp  create_meshing_policy.hpp  frost.hpp  frost_parameter_interface.hpp  frost_parameters.hpp  geometry_meshing.hpp  geometry_meshing_parameters_interface.hpp  geometry_source_interface.hpp  material_mode.hpp  meshing_policy.hpp  positive_radius_culled_particle_istream.hpp  sampler.hpp  utility.hpp
src/: create_meshing_policy.cpp  frost.cpp  frost_parameters.cpp  geometry_meshing.cpp  meshing_policy.cpp  utility.cpp
